adding back the hello model

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Simple Express Basic Auth Demo</title>
+        <title>Work Session</title>
         <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
     </head>
     <body class="code lh-copy w-100 h-100 flex flex-column justify-center items-center">
